CHORE Update label fontsize for radio and checkbox, ensure wrapping on mobile (#126)

--- a/scss/forms/form_group.scss
+++ b/scss/forms/form_group.scss
@@ -15,11 +15,11 @@
     padding: 1rem;
 
     .InputLabel {
-      @include font-type-40--bold;
+      @include font-type-30--bold;
       margin-bottom: 0.5rem;
 
       &__helper-text {
-        @include font-type-40--light;
+        @include font-type-30--light;
         color: $ux-gray-900;
       }
     }
