--- a/scss/forms/input_label.scss
+++ b/scss/forms/input_label.scss
@@ -4,6 +4,7 @@
 .InputLabel {
   @include font-type-30--bold;
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 0.375rem;
 
   &__helper-text {
